update release info after 4.1.0-RC1